<resources>
    <string name="app_name">NavDrawerExperiment</string>
    <string name="fab_content_description">fab</string>
    <string name="import_menu_text">Import</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="gallery_menu">Gallery</string>
    <string name="menu_slideshow">Slide Show</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logo_content_description">Menu logo</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>